[package]
name = "geyser"
version = "0.2.0"
authors = ["Hjalte Nannestad <hjalte.nannestad@gmail.com>"]

description = "Crate for simpifying the use of vulkano for smaller projects"

homepage = "https://github.com/ChangeCaps/geyser"
repository = "https://github.com/ChangeCaps/geyser.git"

keywords = ["gpu", "gpgpu", "vulkan"]

license = "MIT"

[dependencies]
vulkano = "0.14.0"
vulkano-shaders = "0.14.0"
