[package]
name = "geyser"
version = "0.1.0"
edition = "2024"
build = "build/build.rs"

[workspace]
members = [
    "examples/raytrace",
]

[features]
window = ["dep:raw-window-handle", "dep:ash-window"]
unsafe-disable-validation = []

[build-dependencies.xml-rs]
version = "0.8"

[dependencies.ash]
version = "0.38"
features = ["linked"]

[dependencies.tracing]
version = "0.1"

[dependencies.raw-window-handle]
version = "0.6"
optional = true

[dependencies.ash-window]
version = "0.13"
optional = true

[dependencies.bitflags]
version = "2"

[dev-dependencies.tracing-subscriber]
version = "0.3"
features = ["env-filter", "fmt"]
